# rbctoolkit

./: README.md  rbcChain.c  rbcConfig.c  rbcGrAxis.c  rbcGrBar.c  rbcGrElem.c  rbcGrElem.h  rbcGrLegd.c  rbcGrMisc.c  rbcImage.c  rbcImage.h  rbcInt.c  rbcParse.c  rbcParse.h  rbcVecMath.c  rbcVecObjCmd.c  rbcVector.h
TestArtifacts/: Barchart - Element.docx  Barchart - Test Cases.docx  Graph - Manual Test Procedures.docx  Graph Test Cases.docx  Vector - Test Procedures.docx  Vector Test Cases.docx
TestArtifacts/Graph/: Graph - Axis.docx  Graph - Grid.docx  Graph - Postscript.docx  Graph - Snap.docx
branches/tclObjSrc/: rbc.h  rbcChain.h  rbcConfig.c  rbcGrElem.c  rbcGrLine.c  rbcGrPs.c  rbcGraph.c  rbcGraph.h  rbcInt.h  rbcPs.c  rbcSwitch.c  rbcVector.c
rbc/: ChangeLog  Makefile.in  README  configure  configure.in  pkgIndex.tcl.in
rbc/demos/: README.txt  barchart1.tcl  barchart2.tcl  barchart3.tcl  barchart4.tcl  barchart5.tcl  busy1.tcl  busy2.tcl  demos.tcl  graph1.tcl  graph2.tcl  graph3.tcl  graph4.tcl  graph5.tcl  graph6.tcl  graph7.tcl  stripchart1.tcl  winop1.tcl  winop2.tcl
rbc/demos/bitmaps/: BLT.xbm  bigBLT.xbm
rbc/demos/extras/: globe.tcl  page.tcl  xcolors.tcl
rbc/demos/scripts/: common.tcl  graph1.tcl  graph2.tcl  graph3.tcl  graph46.tcl  ps.tcl
rbc/demos/scripts/other/: barchart2.tcl  graph5.tcl  graph8.tcl
rbc/demos/stipples/: bdiagonal1.xbm  bdiagonal2.xbm  checker2.xbm  checker3.xbm  cross1.xbm  cross2.xbm  cross3.xbm  crossdiag.xbm  dot1.xbm  dot2.xbm  dot3.xbm  dot4.xbm  fdiagonal1.xbm  fdiagonal2.xbm  globe.0.xbm  globe.1.xbm  globe.10.xbm  globe.11.xbm  globe.12.xbm  globe.13.xbm  globe.14.xbm  globe.15.xbm  globe.16.xbm  globe.17.xbm  globe.18.xbm  globe.19.xbm  globe.2.xbm  globe.20.xbm  globe.21.xbm  globe.22.xbm  globe.23.xbm  globe.24.xbm  globe.25.xbm  globe.26.xbm  globe.27.xbm  globe.28.xbm  globe.29.xbm  globe.3.xbm  globe.4.xbm  globe.5.xbm  (+23 more)
rbc/demos/thumbnails/: barchart1.ppm  barchart2.ppm  barchart3.ppm  barchart4.ppm  barchart5.ppm  graph1.ppm  graph2.ppm  graph3.ppm  graph4.ppm  graph5.ppm  graph6.ppm  graph7.ppm  stripchart1.ppm  test.ppm  winop1.ppm  winop2.ppm
rbc/doc/: barchart.html  barchart.n  graph.html  makehtmldocs.cmd  rbc.css  spline.html  stripchart.html  stripchart.n  vector.html  winop.html
rbc/generic/: rbc.decls  rbc.h  rbcCanvEps.c  rbcConfig.c  rbcDecls.h  rbcGrAxis.c  rbcGrBar.c  rbcGrElem.c  rbcGrLegd.c  rbcGrLine.c  rbcGrMarker.c  rbcGrPs.c  rbcGraph.c  rbcInt.c  rbcInt.h  rbcMath.h  rbcPs.c  rbcSpline.c  rbcStubInit.c  rbcStubLib.c  rbcTile.c  rbcVecMath.c  rbcVector.c  rbcVector.h  rbcWin.h  rbcWinDraw.c  rbcWinImage.c  rbcWinUtil.c  rbcWindow.c
rbc/manualtests/barchart/: BarchartRunAllSupportMethods.tcl  RBC.barchart.axis.configure.M.tcl  RBC.barchart.axis.transform.M.tcl  RBC.barchart.crosshairs.configure.M.tcl  RBC.barchart.element.create.M.tcl  RBC.barchart.element.deactivate.M.tcl  RBC.barchart.element.delete.M.tcl  RBC.barchart.grid.configure.M.tcl  RBC.barchart.legend.configure.M.tcl  RBC.barchart.marker.configure.bitmap.M.tcl  RBC.barchart.marker.configure.image.M.tcl  RBC.barchart.marker.configure.polygon.M.tcl  RBC.barchart.marker.configure.text.M.tcl  RBC.barchart.marker.delete.M.tcl  RBC.barchart.pen.configure.M.tcl
rbc/manualtests/eps/: EPSRunAllSupportMethods.tcl  RBC.eps.file.M.tcl  RBC.eps.height.M.tcl  RBC.eps.image.M.tcl  RBC.eps.relief.M.tcl  RBC.eps.title.M.tcl
rbc/manualtests/graph/: GraphRunAllSupportMethods.tcl  RBC.graph.axis.configure.M.tcl  RBC.graph.element.closest.M.tcl  RBC.graph.element.configure.M.tcl  RBC.graph.element.delete.M.tcl  RBC.graph.extents.M.tcl  RBC.graph.invtransform.M.tcl  RBC.graph.marker.bind.M.tcl  RBC.graph.marker.configure.image.M.tcl  RBC.graph.marker.configure.polygon.M.tcl  RBC.graph.marker.configure.window.M.tcl  RBC.graph.pen.configure.M.tcl  RBC.graph.pen.delete.M.tcl  RBC.graph.snap.M.tcl
rbc/manualtests/stripchart/: RBC.stripchart.bar.M.tcl  RBC.stripchart.element.activate.M.tcl  RBC.stripchart.extents.M.tcl  RBC.stripchart.legend.bind.M.tcl  RBC.stripchart.legend.get.M.tcl  RBC.stripchart.pen.configure.M.tcl  RBC.stripchart.pen.delete.M.tcl  RBC.stripchart.transform.M.tcl  StripchartRunAllSupportMethods.tcl
rbc/manualtests/winop/: RBC.winop.convolve.M.tcl  RBC.winop.image.snap.M.tcl  RBC.winop.raise.M.tcl  RBC.winop.readjpeg.M.tcl
rbc/tests/: RBC.barchart.axis.cget.A.test  RBC.barchart.axis.names.A.test  RBC.barchart.configure.A.test  RBC.barchart.element.activate.A.test  RBC.barchart.element.configure.A.test  RBC.barchart.element.exists.A.test  RBC.barchart.element.names.A.test  RBC.barchart.element.type.A.test  RBC.barchart.legend.cget.A.test  RBC.barchart.marker.configure.bitmap.A.test  RBC.barchart.marker.configure.common.A.test  RBC.barchart.marker.configure.image.A.test  RBC.barchart.marker.configure.polygon.A.test  RBC.barchart.marker.exists.A.test  RBC.barchart.marker.names.A.test  RBC.barchart.marker.type.A.test  RBC.barchart.pen.configure.A.test  RBC.barchart.pen.create.A.test  RBC.barchart.postscript.configure.A.test  RBC.barchart.postscript.output.A.test  RBC.eps.file.A.test  RBC.eps.image.A.test  RBC.eps.quick.A.test  RBC.eps.shadow.A.test  RBC.eps.showimage.A.test  RBC.graph.axis.configure.A.test  RBC.graph.axis.create.A.test  RBC.graph.axis.limits.A.test  RBC.graph.bar.A.test  RBC.graph.configure.A.test  RBC.graph.crosshairs.cget.A.test  RBC.graph.element.exists.A.test  RBC.graph.legend.cget.A.test  RBC.graph.marker.bind.A.test  RBC.graph.marker.configure.bitmap.A.test  RBC.graph.marker.configure.common.A.test  RBC.graph.marker.configure.image.A.test  RBC.graph.marker.delete.A.test  RBC.graph.pen.create.A.test  RBC.stripchart.axis.delete.A.test  (+32 more)
rbc/win/: makefile.vc
tags/rbc-0.1/: Makefile.in  README  configure.in
tags/rbc-0.1/generic/: rbcGraph.c  rbcGraph.h
tags/rbc-0.1/tests/: RBC.barchart.axis.delete.A.test  RBC.barchart.element.create.A.test  RBC.barchart.element.delete.A.test  RBC.barchart.grid.configure.A.test  (+45 more)
trunk/rbc/: Makefile.in  configure  configure.in  pkgIndex.tcl.in  teapot.txt.in
(+267 files in other folders)
